recuperacao de conta

--- a/App/Views/index/index.phtml
+++ b/App/Views/index/index.phtml
@@ -18,7 +18,7 @@
 				</div>
 				<div class="box_entrar_esqueci">
 					<button type="submit">entrar</button>
-					<a href="/recuperar" class="recuperar">recuperar conta</a>
+					<a href="/recuperar_conta" class="recuperar">recuperar conta</a>
 				</div>
 				<a href="/cadastrar" class="cadastrar">cadastrar</a>
 			</form>
