--- a/App/Views/index/recuperar.phtml
+++ b/App/Views/index/recuperar.phtml
@@ -1,4 +1,4 @@
-<form method="GET" action="/recuperando_conta">
+<form method="GET" action="/recuperacao">
     <div class="box_email">
         <label>email cadastrado:</label>
         <input type="text" name="email" />
