--- a/App/Views/app/perfil.phtml
+++ b/App/Views/app/perfil.phtml
@@ -1,7 +1,15 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col">
-
+            <?php
+                if(isset($_GET['msg'])){
+                    if($_GET['msg'] == 'dadosAlt'){
+                        echo 'dados alterados';
+                    }
+                }
+            ?>
+			<a href="/painel">voltar</a>
+            <a href="/deletar_conta">deletar conta</a>
         </div>
         <div class="col">
             <p><?= $this->view->dados_usuario['nome']; ?></p>
