--- a/App/Views/app/perfil.phtml
+++ b/App/Views/app/perfil.phtml
@@ -12,6 +12,7 @@
             <a href="/deletar_conta">deletar conta</a>
         </div>
         <div class="col">
+            <img src="img/<?= $this->view->dados_usuario['foto']; ?>" class="img-fluid" />
             <p><?= $this->view->dados_usuario['nome']; ?></p>
             <p><?= $this->view->dados_usuario['sobrenome']; ?></p>
             <p><?= $this->view->dados_usuario['nascimento']; ?></p>
