formatacao do nome da foto e talvez outras melhorias

--- a/App/Views/app/alterar_dados.phtml
+++ b/App/Views/app/alterar_dados.phtml
@@ -78,7 +78,7 @@
 							echo '<small class="text-danger">email já existe</small>';
                         }
                         if($_GET['msg'] == 'kinesis_iguais'){
-                            echo '<small class="text-danger">kinese primária igual a secundária</small>';
+                            echo '<small class="text-danger">kinese secundária igual a primária</small>';
                         }
 					}
 				?>
