--- a/App/Views/app/painel.phtml
+++ b/App/Views/app/painel.phtml
@@ -132,13 +132,9 @@
         <div class="box_texto">
             <textarea name="post_texto"></textarea>
         </div>
-        <div class="box_imagem">
-            <label for="post_imagem">imagem</label>
-            <input type="file" name="post_imagem" id="post_imagem" style="display: none;" />
-        </div>
-        <div class="box_video">
-            <label for="post_video">video</label>
-            <input type="file" name="post_video" id="post_video" style="display: none;" />
+        <div class="box_arquivo">
+            <label for="post_arquivo">arquivo</label>
+            <input type="file" name="post_arquivo" id="post_arquivo" style="display: none;" />
         </div>
         <div class="box_submit">
             <button type="submit">postar</button>
@@ -147,16 +143,16 @@
 </div>
 <div class="postagens">
     <?php
-        // foreach($this->view->postagens AS $postagem){
-        //     print("
-        //         <div class='postagem'>
-        //             <!-- deixar tag dinâmica para arquivo -->
-        //             <img src='img/wallpaper.jpeg' class='postagem' style='width:300;' />
-        //             <p>".$postagem['texto']."</p>
-        //             <img src='sdasds' class='imagem_usuario_publicacao' />
-        //             <p>nome usuário</p>
-        //         </div>
-        //     ");
-        // }
+        foreach($this->view->postagens AS $postagem){
+            print("
+                <div class='postagem'>
+                    <!-- deixar tag dinâmica para arquivo -->
+                    <img src='post/".$postagem['arquivo']."' class='postagem' style='width:300;' />
+                    <p>".$postagem['texto']."</p>
+                    <img src='img/perfil/".$postagem['foto_usuario']."' class='imagem_usuario_publicacao' style='width:100;' />
+                    <p>".$postagem['nome_usuario']."</p>
+                </div>
+            ");
+        }
     ?>
 </div>
