correção de bugs ao alterar ou adicionar kinese

--- a/App/Views/app/alterar_dados.phtml
+++ b/App/Views/app/alterar_dados.phtml
@@ -78,7 +78,7 @@
 							echo '<small class="text-danger">email já existe</small>';
                         }
                         if($_GET['msg'] == 'kinesis_iguais'){
-                            echo '<small class="text-danger">kinese secundária igual a primária</small>';
+                            echo '<small class="text-danger">kinese secundária igual à primária</small>';
                         }
                         // recebendo no painel
                         if($_GET['msg'] == 'formato_bloqueado'){
