--- a/App/Views/app/painel.phtml
+++ b/App/Views/app/painel.phtml
@@ -18,6 +18,9 @@
         if($_GET['msg'] == 'postVazio'){
             print("<p class='text-danger'>post vazio</p>");
         }
+        if($_GET['msg'] == 'kinesis_iguais'){
+            print("<p class='text-danger'>kinese primária idêntica à secundária</p>");
+        }
     }
 ?>
 
@@ -72,9 +75,9 @@
                         <option value="Luminokinese">Luminokinese</option>
                         <option value="Pyrokinese">Pyrokinese</option>
                         <option value="Psicokinese">Psicokinese</option>
-                        <option value="Umbrakinesis ">Umbrakinesis </option>
-                        <option value="Atmokinese ">Atmokinese</option>
-                        <option value="Telecinese ">Telecinese</option>
+                        <option value="Umbrakinesis">Umbrakinesis </option>
+                        <option value="Atmokinese">Atmokinese</option>
+                        <option value="Telecinese">Telecinese</option>
                     </select>
                 </div>
                 <div class="box_secundaria">
