criação de busca de amigos

--- a/App/Views/app/painel.phtml
+++ b/App/Views/app/painel.phtml
@@ -1,5 +1,6 @@
 <a href="/sair">sair</a><br/>
-<a href="/perfil">perfil</a>
+<a href="/perfil">perfil</a><br/>
+<a href="/adicionar_amigos"> adicionar amgios</a>
 
 <?php
     if(isset($_GET['msg'])){
