--- a/App/Views/index/index.phtml
+++ b/App/Views/index/index.phtml
@@ -1,24 +1,21 @@
-<!-- Icone de teste -->
-<!-- <i class="fas fa-adjust"></i> -->
-
-<div class="container-fluid h-100">
-	<div class="row">
-		<div class="col-lg banner">
-			<p>Banner</p>
-		</div>
-		<div class="col-lg d-flex justify-content-center align-items-center login">
-			<form method="POST" action="/autenticar" class="mb-3">
-				<div class="box_login">
+<div class="container-fluid h-100 index">
+	<div class="row row-cols-2">
+		<div class="col-md-6 col-xs-12 banner"></div>
+		<div class="col-md login">
+			<h1 class="display-4 text-center my-5 text-success msg">Bem-vindo(a) ao Ganko.</h1>
+			<form method="POST" action="/autenticar" class="form-group mx-auto w-50">
+				<div class="box_login form-group">
 					<label class="text-success">login:</label>
-					<input type="text" name="login" placeholder="login ou email" />
+					<input type="text" name="login" placeholder="login ou email" class="form-control" />
 				</div>
-				<div class="box_senha">
+				<div class="box_senha form-group">
 					<label class="text-success">senha:</label>
-					<input type="password" name="senha" placeholder="mínino 6 caracteres" />
+					<input type="password" name="senha" placeholder="mínimo 6 caracteres" class="form-control" />
 				</div>
-				<div class="box_entrar_esqueci">
-					<button type="submit">entrar</button>
-					<a href="/recuperar" class="text-danger recuperar">recuperar conta</a>
+					<button type="submit" class="btn btn-success btn-lg px-4 py-1">entrar</button>
+				<div class="box_entrada mt-4 pt-1">
+					<a href="/recuperar" class="text-success">recuperar conta</a>
+					<a href="/inscrever" class="text-success">cadastrar</a>
 				</div>
 
 				<?php
@@ -29,8 +26,6 @@
 						print("<span class='text-danger'>acesso negado</span>");
 					} 
 				?>
-
-				<a href="/inscrever" class="text-success cadastrar">cadastrar</a>
 			</form>
 	</div>
 </div>
