--- a/App/Views/layout.phtml
+++ b/App/Views/layout.phtml
@@ -1,13 +1,14 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Bambu</title>
+		<title>Ganko</title>
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<script src="https://kit.fontawesome.com/e254a39363.js" crossorigin="anonymous"></script>
 		<script src="js/cadastro.js"></script>
 
 		<link href="css/style.css" rel="stylesheet" />
+		<link href="img/sistema/ganko.ico" rel="shortcut icon" type="image/ico" />
 
 	</head>
 
